-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.8.0
-
3
-
9223372036854775807
File creates are not tracked on the MDS in the md_stats file:
# lctl set_param mdt.*.md_stats=clear mdt.lustre-MDT0000.md_stats=clear # touch /mnt/lustre/newfile1 # lctl get_param mdt.*.md_stats mdt.lustre-MDT0000.md_stats= snapshot_time 1463430465.508409 secs.usecs open 1 samples [reqs] close 1 samples [reqs] getattr 1 samples [reqs] setattr 1 samples [reqs] getxattr 1 samples [reqs] setxattr 1 samples [reqs]
If you call mknod() with S_IFREG to create a file, it is tracked as a mknod. Most file creates are from open with create intent.
- is related to
-
LU-8335 Interop - b2_8<->master : sanity test_133a: The mknod counter on mds1 is wrong - expected 1
-
- Closed
-