LU-8150 mdt: Track open+create as mknod

Regular files created with mknod are tracked, but most files are
created as an open with create intent. Track this as a mknod also.

Signed-off-by: Matt Ezell <ezellma@ornl.gov>
Change-Id: I8f6ab9d91d0b31062c7f73f8394a1b12f7963f1c