lustre/tests/sanity.sh
@@ -9268,7 +9268,7 @@ test_133a() {
 	check_stats $SINGLEMDS "open" 1
 	check_stats $SINGLEMDS "close" 1
 	mknod ${testdir}/${tfile}-pipe p || "mknod failed"
-	check_stats $SINGLEMDS "mknod" 1
+	check_stats $SINGLEMDS "mknod" 2
 	rm -f ${testdir}/${tfile}-pipe || "pipe remove failed"
 	check_stats $SINGLEMDS "unlink" 1
 	rm -f ${testdir}/${tfile} || error "file remove failed"
